# MyDM

./: README.md  demo.py  pyproject.toml
mydm/: __init__.py  bot.py  cqcode.py  event.py  exceptions.py  interactor.py  message.py  tool.py  type.py  utils.py
mydm/interactor/: __init__.py  aiohttp.py  gocqhttp.py
mydm/interactor/gocqhttp/: __init__.py  cqcode.py
test/: test_bot.py  test_cqcode.py
unittest/: test_bot.py  test_cqcode.py
