[tool.poetry]
name = "mydm"
version = "0.0.1a1"
description = "A qq chatbot framework"
authors = ["yuyi2439 <yuyi2439@qq.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
